Menambahkan Play Framework project

--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -26,19 +26,17 @@
 \author{\nama \textendash \@npm} 
 
 %tulis nama dan NPM anda di sini:
-\newcommand{\nama}{Lionov}
-\newcommand{\@npm}{1997730020}
-\newcommand{\@judultopik}{Median Trajectory} % Judul/topik anda
+\newcommand{\nama}{Herfan Heryandi}
+\newcommand{\@npm}{2012730012}
+\newcommand{\@judultopik}{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Student Portal UNPAR} % Judul/topik anda
 \newcommand{\jumpemb}{1} % Jumlah pembimbing, 1 atau 2
-\newcommand{\tanggal}{01/01/1900}
+\newcommand{\tanggal}{20/06/2015}
 \maketitle
 
 \pagenumbering{arabic}
 
 \section{Deskripsi}
 Tuliskan deskripsi dari topik skripsi yang akan anda ajukan. Di sini dapat dituliskan latar belakang, seperti apa penelitian yang sudah ada sebelumnya dan apa yang akan anda kerjakan. Sertakan gambar agar penjelasan anda menjadi lebih baik.
-
-\lipsum[1] %hapus ini
 
 \section{Rumusan Masalah}
 Tuliskan rumusan dari masalah yang akan anda bahas pada skripsi ini. Rumusan masalah biasanya berupa kalimat pertanyaan. Gunakan itemize seperti contoh di bagian Deskripsi Perangkat Lunak.
