edit Rencana Kerja

--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -64,17 +64,20 @@ Rencana kerja untuk menyelesaikan skripsi ini:
 \begin{itemize}
 	\item Pada saat mengambil kuliah AIF401 Skripsi 1
 	\begin{enumerate}
-		\item Melakukan studi literatur tentang algoritma-algoritma yang berkaitan dengan pemrosesan data trajectory.
-		\item Mempelajari algoritma untuk menghitung Frechet Distance
-		\item Mempelajari fitur-fitur bahasa Java untuk membuat Graphical User Interface
-		\item Merancang algoritma/langkah-langkah untuk membuat secara otomatis pembangkit data trajectory
+		\item Melakukan studi literatur tentang Web Scraping.
+		\item Mempelajari DevTools.
+		\item Mempelajari \textit{library} jsoup.
+		\item Mempelajari Play Framework.
+		\item Mempelajari cara kerja Student Portal UNPAR.
+		\item Merancang fitur-fitur yang akan ditambahkan dalam IT Student Portal.
 	\end{enumerate}
 	\item Pada saat mengambil kuliah AIF401 Skripsi 2
 	\begin{enumerate}
-		\item Merancang dan mengimplementasikan algoritma untuk mencari Median Trajectory.
-		\item Mengimplementasikan pembangkit data trajectory 
-		\item Melakukan pengujian dan eksperimen
-		\item Membuat dokumentasi skripsi
+		\item Merancang dan mengimplementasikan \textit{Web Scraping} dengan jsoup.
+		\item Mengimplementasikan fitur-fitur IT Student Portal. 
+		\item Membuat antarmuka IT Student Portal menggunakan Play Framework. 
+		\item Melakukan pengujian dan eksperimen.
+		\item Membuat dokumentasi skripsi.
 	\end{enumerate}
 \end{itemize}
 
