Menambahkan app ke dalam eclipse

--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -36,7 +36,7 @@
 \pagenumbering{arabic}
 
 \section{Deskripsi}
-Tuliskan deskripsi dari topik skripsi yang akan anda ajukan. Di sini dapat dituliskan latar belakang, seperti apa penelitian yang sudah ada sebelumnya dan apa yang akan anda kerjakan. Sertakan gambar agar penjelasan anda menjadi lebih baik.
+Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa UNPAR. 
 
 \section{Rumusan Masalah}
 Tuliskan rumusan dari masalah yang akan anda bahas pada skripsi ini. Rumusan masalah biasanya berupa kalimat pertanyaan. Gunakan itemize seperti contoh di bagian Deskripsi Perangkat Lunak.
@@ -64,18 +64,15 @@ Rencana kerja untuk menyelesaikan skripsi ini:
 \begin{itemize}
 	\item Pada saat mengambil kuliah AIF401 Skripsi 1
 	\begin{enumerate}
-		\item Melakukan studi literatur tentang Web Scraping.
-		\item Mempelajari DevTools.
 		\item Mempelajari \textit{library} jsoup.
 		\item Mempelajari Play Framework.
+		\item Mempelajari Chrome DevTools.
 		\item Mempelajari cara kerja Student Portal UNPAR.
-		\item Merancang fitur-fitur yang akan ditambahkan dalam IT Student Portal.
+		\item Menganalisa fitur-fitur yang akan ditambahkan dalam IT Student Portal.
 	\end{enumerate}
-	\item Pada saat mengambil kuliah AIF401 Skripsi 2
+	\item Pada saat mengambil kuliah AIF402 Skripsi 2
 	\begin{enumerate}
-		\item Merancang dan mengimplementasikan \textit{Web Scraping} dengan jsoup.
-		\item Mengimplementasikan fitur-fitur IT Student Portal. 
-		\item Membuat antarmuka IT Student Portal menggunakan Play Framework. 
+		\item Merancang dan mengimplementasikan fitur-fitur IT Student Portal. 
 		\item Melakukan pengujian dan eksperimen.
 		\item Membuat dokumentasi skripsi.
 	\end{enumerate}
