Edit Bab 1 dan Rencana Kerja

--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -148,7 +148,7 @@
 %				(e.g. \penguji{\JHD}{\JCD} ) , \JND dan \JCD adalah kode dosen
 %
 %=============================================================================
-\namanpm{<<Nama Lengkap>>}{<<10 digit NPM UNPAR>>}	%hilangkan tanda << & >>
+\namanpm{Herfan Heryandi}{2012730012}	%hilangkan tanda << & >>
 \tanggal{<<tanggal>>}{<<bulan>>}{<<tahun>>}			%hilangkan tanda << & >>
 \pembimbing{<<pembimbing utama/1>>}{<<pembimbing pendamping/2>>}     
 %Lihat singkatan pembimbing anda di file dosen.tex, hilangkan tanda << & >>
