--- a/doc/DokumenSkripsi/main.tex
+++ b/doc/DokumenSkripsi/main.tex
@@ -146,10 +146,10 @@
 \newcommand{\vkajurtif}{Jack Doe}
 
 \newcommand{\namanpm}[2]{
-	\renewcommand{\vstaINA}{<<SKRIPSI/TUGAS AKHIR>>}
-	\renewcommand{\vprodiINA}{<<MATEMATIKA/FISIKA/TEKNIK INFORMATIKA>>}
-	\renewcommand{\vstaENG}{<<FINAL PROJECT/UNDERGRADUATE THESIS>>}
-	\renewcommand{\vprodiENG}{<<MATHEMATICS/PHYSICS/INFORMATICS>>}
+	\renewcommand{\vstaINA}{SKRIPSI}
+	\renewcommand{\vprodiINA}{<TEKNIK INFORMATIKA}
+	\renewcommand{\vstaENG}{UNDERGRADUATE THESIS}
+	\renewcommand{\vprodiENG}{INFORMATICS}
 	\renewcommand{\vnama}{\uppercase{#1}} \renewcommand{\vlnama}{#1} \hypersetup{pdfauthor={#2 - #1}}
 	\renewcommand{\vnpm}{#2} \hypersetup{pdfcreator={#2}} \StrChar{\vnpm}{6}[\vprodiN]
 	\ifdefstring{\vprodiN}{1}{
