--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -36,13 +36,22 @@
 \pagenumbering{arabic}
 
 \section{Deskripsi}
-Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa UNPAR. 
+Student Portal UNPAR[] merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{Web Scraping}
 
 \section{Rumusan Masalah}
-Tuliskan rumusan dari masalah yang akan anda bahas pada skripsi ini. Rumusan masalah biasanya berupa kalimat pertanyaan. Gunakan itemize seperti contoh di bagian Deskripsi Perangkat Lunak.
+Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
+berikut:
+\begin{itemize}
+	\item Fitur-fitur apa saja yang akan dibuat untuk IT Student Portal?
+	\item Bagaimana mengimplementasikan \textit{Web Scraping} dengan \textit{library} jsoup?
+\end{itemize}
 
 \section{Tujuan}
-Tuliskan tujuan dari topik skripsi yang anda ajukan. Tujuan penelitian biasanya berkaitan erat dengan pertanyaan yang diajukan di bagian rumusan masalah. Gunakan itemize seperti contoh di bagian Deskripsi Perangkat Lunak.
+Tujuan-tujuan yang hendak dicapai melalui penulisan skripsi ini sebagai berikut:
+\begin{itemize}
+	\item	Mengetahui fitur-fitur yang akan dibuat dalam IT Student Portal.
+	\item	Mengimplementasikan \textit{Web Scraping} menggunakan \textit{library} jsoup.
+\end{itemize}
 
 \section{Deskripsi Perangkat Lunak}
 Tuliskan deksripsi dari perangkat lunak yang akan anda hasilkan. Apa saja fitur yang disediakan oleh PL tersebut dan apa saja kemampuan dari PL tersebut. Perhatikan contoh di bawah ini:
