--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -76,8 +76,8 @@ Rencana kerja untuk menyelesaikan skripsi ini:
 		\item Mempelajari \textit{library} jsoup.
 		\item Mempelajari Play Framework.
 		\item Mempelajari Chrome DevTools.
-		\item Mempelajari cara kerja Student Portal UNPAR.
-		\item Menganalisa fitur-fitur yang akan ditambahkan dalam IT Student Portal.
+		\item Menganalisis cara kerja Student Portal UNPAR.
+		\item Menganalisis fitur-fitur yang akan ditambahkan dalam IT Student Portal.
 	\end{enumerate}
 	\item Pada saat mengambil kuliah AIF402 Skripsi 2
 	\begin{enumerate}
