--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -36,7 +36,7 @@
 \pagenumbering{arabic}
 
 \section{Deskripsi}
-Student Portal UNPAR[] merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{Web Scraping}
+Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{Web Scraping}
 
 \section{Rumusan Masalah}
 Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
@@ -44,6 +44,7 @@ berikut:
 \begin{itemize}
 	\item Fitur-fitur apa saja yang akan dibuat untuk IT Student Portal?
 	\item Bagaimana mengimplementasikan \textit{Web Scraping} dengan \textit{library} jsoup?
+	\item Bagaimana membangun aplikasi IT Student Portal?
 \end{itemize}
 
 \section{Tujuan}
@@ -51,31 +52,23 @@ Tujuan-tujuan yang hendak dicapai melalui penulisan skripsi ini sebagai berikut:
 \begin{itemize}
 	\item	Mengetahui fitur-fitur yang akan dibuat dalam IT Student Portal.
 	\item	Mengimplementasikan \textit{Web Scraping} menggunakan \textit{library} jsoup.
+	\item Membangun aplikasi IT Student Portal.
 \end{itemize}
 
 \section{Deskripsi Perangkat Lunak}
-Tuliskan deksripsi dari perangkat lunak yang akan anda hasilkan. Apa saja fitur yang disediakan oleh PL tersebut dan apa saja kemampuan dari PL tersebut. Perhatikan contoh di bawah ini:
-
 Perangkat lunak akhir yang akan dibuat memiliki fitur minimal sebagai berikut:
 \begin{itemize}
-	\item Pengguna dapat membangkitkan data-data {\it trajectory} secara otomatis sesuai dengan aturan yang telah ditentukan.
-	\item Pengguna dapat memasukkan secara manual data-data {\it trajectory}, baik melalui suatu {\it GUI (Graphical User Interface)} maupun melalui file teks. 
-	\item PL dapat menampilkan data-data yang sudah dimasukkan ataupun yang dibangkitkan secara otomatis melalui {\it GUI (Graphical User Interface)}.
-	\item Pengguna dapat memasukkan parameter-parameter yang digunakan oleh algoritma.
-	\item PL dapat menghitung dan menampilkan median trajectory secara otomatis, berdasarkan data-data trajectory yang diberikan.
-	\item PL dapat secara otomatis melakukan pembangkitan data untuk digunakan pada beberapa ratus tes kasus yang akan diuji. Untuk setiap tes kasus, PL dapat membuat laporan lengkap mengenai tes kasus tersebut.
+	\item Perangkat lunak dapat menampilkan daftar mata kuliah yang dibuka.
+	\item Pengguna dapat memeriksa prasyarat mata kuliah yang dibuka.
 \end{itemize}
+Fitur-fitur lainnya akan ditambahkan setelah melakukan wawancara.
 
 \section{Rencana Kerja}
-Tuliskan rencana anda untuk menyelesaikan skripsi. Rencana kerja dibagi menjadi dua bagian yaitu yang akan dilakukan pada saat mengambil kuliah AIF401 Skripsi 1 dan pada saat mengambil kuliah AIF402 Skripsi 2. Perhatikan contoh berikut ini :
-
 Rencana kerja untuk menyelesaikan skripsi ini:
 \begin{itemize}
 	\item Pada saat mengambil kuliah AIF401 Skripsi 1
 	\begin{enumerate}
-		\item Mempelajari \textit{library} jsoup.
-		\item Mempelajari Play Framework.
-		\item Mempelajari Chrome DevTools.
+		\item Mempelajari \textit{library} jsoup, Play Framework, dan Chrome DevTools.
 		\item Menganalisis cara kerja Student Portal UNPAR.
 		\item Menganalisis fitur-fitur yang akan ditambahkan dalam IT Student Portal.
 	\end{enumerate}
@@ -90,10 +83,7 @@ Rencana kerja untuk menyelesaikan skripsi ini:
 \section{Isi {\it Progress Report} Skripsi 1}
 Isi dari {\it Progress Report} Skripsi 1 yang akan diselesaikan dan dilaporkan ke pembimbing paling lambat 2 minggu sebelum tenggat waktu yang ditetapkan koordinator adalah :
 \begin{enumerate}
-	\item Algoritma/langkah-langkah untuk membuat pembangkit otomatis data trajectory
-	\item Hasil eksperimen penggunaan fitur-fitur Graphical User Interface pada bahasa Java
-	\item Algoritma dan contoh perhitungan untuk kasus menghitung jarak dengan Frechet Distance
-	\item \ldots (to be continued)
+	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
 \end{enumerate}
 Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 99\%
 
