Edit Rencana Kerja

--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -83,9 +83,18 @@ Rencana kerja untuk menyelesaikan skripsi ini:
 \section{Isi {\it Progress Report} Skripsi 1}
 Isi dari {\it Progress Report} Skripsi 1 yang akan diselesaikan dan dilaporkan ke pembimbing paling lambat 2 minggu sebelum tenggat waktu yang ditetapkan koordinator adalah :
 \begin{enumerate}
+	\item Mengerti teori yang.
 	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
 \end{enumerate}
-Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 99\%
+Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 50\%
+
+\section{Isi {\it Progress Report} Skripsi 1}
+Isi dari {\it Progress Report} Skripsi 1 yang akan diselesaikan dan dilaporkan ke pembimbing paling lambat 2 minggu sebelum tenggat waktu yang ditetapkan koordinator adalah :
+\begin{enumerate}
+	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
+	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
+\end{enumerate}
+Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 90\%
 
 \section{Pernyataan Khusus}
 Berlatar belakang perihal kejujuran serta keterbasan jumlah dosen, saya menyatakan akan mematuhi aturan-aturan khusus berikut:
