--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -6,19 +6,19 @@
 
 Student Portal UNPAR\cite{studentportalunpar} merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. 
 
-Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah prasyarat mata kuliah. Dalam Teknik Informatika UNPAR, terdapat beberapa mata kuliah yang membutuhkan prasyarat baik prasyarat tempuh maupun prasyarat lulus. Student Portal UNPAR sudah menyediakan fitur prasyarat mata kuliah namun kurang mendukung karena data yang ditampilkan kurang akurat. Misalnya dalam pengambilan mata kuliah "`AIF453 Kecerdasan Bisnis"' membutuhkan prasyarat lulus mata kuliah "`AIF204 Manajemen Informasi dan Basis Data"' atau "`AIF102 Algoritma dan Struktur Data"' dengan IPK di atas 2.75 yang dapat dilihat pada gambar \ref{fig:1_prasyarat_tinyurl}. Namun dalam Student Portal UNPAR, prasyarat yang dicantumkan hanya lulus mata kuliah "`AIF204 Manajemen Informasi dan Basis Data"' seperti pada gambar \ref{fig:1_prasyarat_student_portal}. Selain itu, pemeriksaan prasyarat mata kuliah tidak dilakukan secara otomatis sehingga setiap pengambilan mata kuliah tetap dianggap valid meskipun belum memenuhi prasyarat.
+Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah prasyarat mata kuliah. Dalam Teknik Informatika UNPAR, terdapat beberapa mata kuliah yang membutuhkan prasyarat baik prasyarat tempuh maupun prasyarat lulus. Student Portal UNPAR sudah menyediakan fitur prasyarat mata kuliah namun kurang mendukung karena data yang ditampilkan kurang akurat. Misalnya dalam pengambilan mata kuliah "`AIF453 Kecerdasan Bisnis"' membutuhkan prasyarat lulus mata kuliah "`AIF204 Manajemen Informasi dan Basis Data"' atau "`AIF102 Algoritma dan Struktur Data"' dengan IPK di atas 2.75 (Gambar \ref{fig:1_prasyarat_tinyurl}). Namun dalam Student Portal UNPAR, prasyarat yang dicantumkan hanya lulus mata kuliah "`AIF204 Manajemen Informasi dan Basis Data"' (Gambar \ref{fig:1_prasyarat_student_portal}). Selain itu, pemeriksaan prasyarat mata kuliah tidak dilakukan secara otomatis sehingga setiap pengambilan mata kuliah tetap dianggap valid meskipun belum memenuhi prasyarat.
 
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.5]{Gambar/contoh-tinyurl}
-	\caption{Prasyarat Mata Kuliah} 
+	\caption{Prasyarat Mata Kuliah} \footnote{http://tinyurl.com/lionov, diakses 7 Juli 2015}
 	\label{fig:1_prasyarat_tinyurl}
 \end{figure}
 
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.5]{Gambar/contoh-portal}
-	\caption{Prasyarat Mata Kuliah Student Portal UNPAR} 
+	\caption{Prasyarat Mata Kuliah Student Portal UNPAR}
 	\label{fig:1_prasyarat_student_portal}
 \end{figure}
 
