--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -30,13 +30,13 @@
 \newcommand{\@npm}{2012730012}
 \newcommand{\@judultopik}{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Student Portal UNPAR} % Judul/topik anda
 \newcommand{\jumpemb}{1} % Jumlah pembimbing, 1 atau 2
-\newcommand{\tanggal}{20/06/2015}
+\newcommand{\tanggal}{26/08/2015}
 \maketitle
 
 \pagenumbering{arabic}
 
 \section{Deskripsi}
-Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{Web Scraping}
+Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{Web Scraping}.
 
 \section{Rumusan Masalah}
 Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
@@ -83,18 +83,10 @@ Rencana kerja untuk menyelesaikan skripsi ini:
 \section{Isi {\it Progress Report} Skripsi 1}
 Isi dari {\it Progress Report} Skripsi 1 yang akan diselesaikan dan dilaporkan ke pembimbing paling lambat 2 minggu sebelum tenggat waktu yang ditetapkan koordinator adalah :
 \begin{enumerate}
-	\item Mengerti teori yang.
-	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
+	\item Status pemahaman dasar teori yang mendukung aplikasi.
+	\item Status dari hasil analisis pembangunan aplikasi.
 \end{enumerate}
-Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 50\%
-
-\section{Isi {\it Progress Report} Skripsi 1}
-Isi dari {\it Progress Report} Skripsi 1 yang akan diselesaikan dan dilaporkan ke pembimbing paling lambat 2 minggu sebelum tenggat waktu yang ditetapkan koordinator adalah :
-\begin{enumerate}
-	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
-	\item Mengerti dan menyelesaikan dokumentasi Dasar Teori dan Analisis.
-\end{enumerate}
-Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 90\%
+Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 45\%
 
 \section{Pernyataan Khusus}
 Berlatar belakang perihal kejujuran serta keterbasan jumlah dosen, saya menyatakan akan mematuhi aturan-aturan khusus berikut:
