--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -10,7 +10,8 @@ secara otomatis. Dalam Java, \textit{web scraping} dapat diimplementasikan mengg
 \section{Chrome DevTools}
 \label{sec:devtools}
 
-Chrome Developer Tools (DevTools) \cite{devtools} adalah perangkat \textit{debugging} yang dimiliki Google Chrome. \textit{Developer tools} sendiri berfungsi untuk melakukan \textit{debugging} terhadap suatu \textit{website}. DevTools dapat melakukan debugging terhadap website yang dikunjunginya.
+Chrome Developer Tools (DevTools) \cite{devtools} adalah perangkat \textit{debugging} yang dimiliki Google Chrome. Saat menunjungi suatu website, pengguna DevTools dapat melakukan debugging pada website tersebut. DevTools dapat diakses dengan menekan "`Ctrl+Shift+I"' saat sedang membuka suatu website.  
+
 
 Fitur-fitur yang dimiliki DevTools antara lain:
 \begin{enumerate}
