--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -11,7 +11,7 @@ Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah 
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.5]{Gambar/contoh-tinyurl}
-	\caption{Prasyarat Mata Kuliah} \footnote{http://tinyurl.com/lionov, diakses 7 Juli 2015}
+	\caption{Prasyarat Mata Kuliah \footnote{http://tinyurl.com/lionov, diakses 7 Juli 2015}} 
 	\label{fig:1_prasyarat_tinyurl}
 \end{figure}
 
@@ -31,11 +31,11 @@ Untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika, f
 
 Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
 berikut:
-\begin{itemize}
+\begin{enumerate}
 	\item Fitur-fitur apa saja yang akan dibuat untuk IT Student Portal?
 	\item Bagaimana mengimplementasikan \textit{Web Scraping} dengan \textit{library} jsoup?
 	\item Bagaimana membangun aplikasi IT Student Portal?
-\end{itemize}
+\end{enumerate}
 
 \section{Tujuan}
 \label{sec:tujuan}
