Edit Rencana Kerja versi terbaru

--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -33,7 +33,7 @@ Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
 berikut:
 \begin{enumerate}
 	\item Fitur-fitur apa saja yang akan dibuat untuk IT Student Portal?
-	\item Bagaimana mengimplementasikan \textit{Web Scraping} dengan \textit{library} jsoup?
+	\item Bagaimana mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup?
 	\item Bagaimana membangun aplikasi IT Student Portal?
 \end{enumerate}
 
@@ -43,7 +43,7 @@ berikut:
 Tujuan-tujuan yang hendak dicapai melalui penulisan skripsi ini sebagai berikut:
 \begin{itemize}
 	\item	Mengetahui fitur-fitur yang akan dibuat dalam IT Student Portal.
-	\item	Mengimplementasikan \textit{Web Scraping} menggunakan \textit{library} jsoup.
+	\item	Mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup.
 	\item Membangun aplikasi IT Student Portal.
 \end{itemize}
 
@@ -64,8 +64,8 @@ Berikut ini adalah metode-metode yang dilakukan pada penelitian ini:
 \begin{enumerate}
 	\item Melakukan studi mengenai \textit{library} jsoup, Chrome DevTools, dan Play Framework.
 	\item Melakukan wawancara.
-	\item Menganalisis cara kerja Student Portal UNPAR.
-	\item Mengimplementasikan IT Student Portal dengan \textit{library} jsoup.
+	\item Menganalisis Student Portal UNPAR.
+	\item Mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup.
 	\item Melakukan eksperimen dan pengujian.
 \end{enumerate}
 
