--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -16,7 +16,7 @@
 \makeatletter
 \renewcommand{\@maketitle} {\begin{center} {\LARGE \textbf{ \textsc{\@title}} \par} \bigskip {\large \textbf{\textsc{\@author}} }\end{center} }
 \renewcommand{\thispagestyle}[1]{}
-\markright{\textbf{\textsc{AIF401 \textemdash Rencana Kerja Skripsi \textemdash Sem. Ganjil 2015/2016}}}
+\markright{\textbf{\textsc{AIF401/AIF402 \textemdash Rencana Kerja Skripsi \textemdash Sem. Ganjil 2015/2016}}}
 
 \onehalfspacing
  
@@ -30,7 +30,7 @@
 \newcommand{\@npm}{2012730012}
 \newcommand{\@judultopik}{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Student Portal UNPAR} % Judul/topik anda
 \newcommand{\jumpemb}{1} % Jumlah pembimbing, 1 atau 2
-\newcommand{\tanggal}{26/08/2015}
+\newcommand{\tanggal}{10/09/2015}
 \maketitle
 
 \pagenumbering{arabic}
@@ -43,7 +43,7 @@ Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
 berikut:
 \begin{itemize}
 	\item Fitur-fitur apa saja yang akan dibuat untuk IT Student Portal?
-	\item Bagaimana mengimplementasikan \textit{Web Scraping} dengan \textit{library} jsoup?
+	\item Bagaimana mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup?
 	\item Bagaimana membangun aplikasi IT Student Portal?
 \end{itemize}
 
@@ -51,7 +51,7 @@ berikut:
 Tujuan-tujuan yang hendak dicapai melalui penulisan skripsi ini sebagai berikut:
 \begin{itemize}
 	\item	Mengetahui fitur-fitur yang akan dibuat dalam IT Student Portal.
-	\item	Mengimplementasikan \textit{Web Scraping} menggunakan \textit{library} jsoup.
+	\item	Mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup.
 	\item Membangun aplikasi IT Student Portal.
 \end{itemize}
 
@@ -63,30 +63,42 @@ Perangkat lunak akhir yang akan dibuat memiliki fitur minimal sebagai berikut:
 \end{itemize}
 Fitur-fitur lainnya akan ditambahkan setelah melakukan wawancara.
 
-\section{Rencana Kerja}
-Rencana kerja untuk menyelesaikan skripsi ini:
-\begin{itemize}
-	\item Pada saat mengambil kuliah AIF401 Skripsi 1
+\section{Detail Pengerjaan Skripsi}
+Bagian-bagian pekerjaan skripsi ini adalah sebagai berikut :
 	\begin{enumerate}
-		\item Mempelajari \textit{library} jsoup, Play Framework, dan Chrome DevTools.
-		\item Menganalisis cara kerja Student Portal UNPAR.
-		\item Menganalisis fitur-fitur yang akan ditambahkan dalam IT Student Portal.
+		\item Melakukan studi mengenai \textit{library} jsoup, Chrome DevTools, dan Play Framework.
+		\item Melakukan wawancara kepada mahasiswa Program Studi Teknik Informatika untuk mendapatkan informasi penggunaan Student Portal UNPAR.
+		\item Menganalisis Student Portal UNPAR.
+		\item Mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup.
+		\item Membangun perangkat lunak IT Student Portal.
+		\item Melakukan eksperimen dan pengujian.
+		\item Menulis dokumen skripsi.
 	\end{enumerate}
-	\item Pada saat mengambil kuliah AIF402 Skripsi 2
-	\begin{enumerate}
-		\item Merancang dan mengimplementasikan fitur-fitur IT Student Portal. 
-		\item Melakukan pengujian dan eksperimen.
-		\item Membuat dokumentasi skripsi.
-	\end{enumerate}
-\end{itemize}
 
-\section{Isi {\it Progress Report} Skripsi 1}
-Isi dari {\it Progress Report} Skripsi 1 yang akan diselesaikan dan dilaporkan ke pembimbing paling lambat 2 minggu sebelum tenggat waktu yang ditetapkan koordinator adalah :
-\begin{enumerate}
-	\item Status pemahaman dasar teori yang mendukung aplikasi.
-	\item Status dari hasil analisis pembangunan aplikasi.
-\end{enumerate}
-Estimasi persentase penyelesaian skripsi sampai dengan {\it Progress Report} Skripsi 1 adalah : 45\%
+\section{Rencana Kerja}
+\begin{center}
+  \begin{tabular}{ | c | c | c | c | l |}
+    \hline
+    1*  & 2*(\%) & 3*(\%) & 4*(\%) &5*\\ \hline \hline
+    1   & 5  & 5  &  &  \\ \hline
+    2   & 5 & 5  &   & \\ \hline
+    3   & 10  & 7  & 3 & {\footnotesize sebagian kecil teknik {\it flow tiles} di S2}  \\ \hline
+    4   & 15  & 10  &  5 & {\footnotesize teknik lanjut OOP di C++ di S2} \\ \hline
+    5   & 20  & 5  & 15 & {\footnotesize perancangan awal SFM, pathway dan waypoint di S1} \\ \hline
+    6   & 5 &   & 5  & \\ \hline
+    7   & 20  & 5  & 15 &  {\footnotesize implementasi denah dan rancangan awal SFM di S1}\\ \hline
+    8   & 5  &   &  5  & \\ \hline
+    9   & 15  & 3  & 12  & {\footnotesize sebagian bab 1 dan 2, serta bagian awal analisis di S1}\\ \hline
+    Total  & 100  & 40  & 60 &  \\ \hline
+                          \end{tabular}
+\end{center}
+
+Keterangan (*)\\
+1 : Bagian pengerjaan Skripsi (nomor disesuaikan dengan detail pengerjaan di bagian 5)\\
+2 : Persentase total \\
+3 : Persentase yang akan diselesaikan di Skripsi 1 \\
+4 : Persentase yang akan diselesaikan di Skripsi 2 \\
+5 : Penjelasan singkat apa yang dilakukan di S1 (Skripsi 1) atau S2 (skripsi 2)
 
 \section{Pernyataan Khusus}
 Berlatar belakang perihal kejujuran serta keterbasan jumlah dosen, saya menyatakan akan mematuhi aturan-aturan khusus berikut:
@@ -97,8 +109,7 @@ Berlatar belakang perihal kejujuran serta keterbasan jumlah dosen, saya menyatak
 \end{enumerate}
 Saya bersedia mematuhi peraturan di atas, dan bersedia menerima sanksi pembatalan pengambilan Skripsi dengan dosen pembimbing terkait jika terbukti melanggar. Peraturan ini berlaku pada Skripsi 1 dan 2.
 
-\vspace{1.5cm}
-
+\vspace{1cm}
 \centering Bandung, \tanggal\\
 \vspace{2cm} \nama \\ 
 \vspace{1cm}
@@ -120,6 +131,6 @@ Menyetujui, \\
 % \centering Bandung, \makebox[0.5cm]{\hrulefill}/\makebox[0.5cm]{\hrulefill}/2013\\
 \vspace{2cm} Nama: \makebox[3cm]{\hrulefill}\\ Pembimbing Tunggal
 }
-
+`
 \end{document}
 
