Edit Rencana Kerja

--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -36,7 +36,7 @@
 \pagenumbering{arabic}
 
 \section{Deskripsi}
-Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{Web Scraping}.
+Student Portal UNPAR merupakan sistem informasi berbasis \textit{web} yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Student Portal UNPAR yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. Maka, skripsi ini dibuat untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika dengan menggunakan Play Framework dan \textit{library} jsoup untuk mengimplementasikan \textit{web scraping}.
 
 \section{Rumusan Masalah}
 Rumusan dari masalah yang akan dibahas pada skripsi ini sebagai
@@ -80,16 +80,14 @@ Bagian-bagian pekerjaan skripsi ini adalah sebagai berikut :
   \begin{tabular}{ | c | c | c | c | l |}
     \hline
     1*  & 2*(\%) & 3*(\%) & 4*(\%) &5*\\ \hline \hline
-    1   & 5  & 5  &  &  \\ \hline
-    2   & 5 & 5  &   & \\ \hline
-    3   & 10  & 7  & 3 & {\footnotesize sebagian kecil teknik {\it flow tiles} di S2}  \\ \hline
-    4   & 15  & 10  &  5 & {\footnotesize teknik lanjut OOP di C++ di S2} \\ \hline
-    5   & 20  & 5  & 15 & {\footnotesize perancangan awal SFM, pathway dan waypoint di S1} \\ \hline
-    6   & 5 &   & 5  & \\ \hline
-    7   & 20  & 5  & 15 &  {\footnotesize implementasi denah dan rancangan awal SFM di S1}\\ \hline
-    8   & 5  &   &  5  & \\ \hline
-    9   & 15  & 3  & 12  & {\footnotesize sebagian bab 1 dan 2, serta bagian awal analisis di S1}\\ \hline
-    Total  & 100  & 40  & 60 &  \\ \hline
+    1   & 14  & 14  &  &  \\ \hline
+    2   & 14 & 14  &   & \\ \hline
+    3   & 14  & 14  &  & \\ \hline
+    4   & 14  &   &  14 & \\ \hline
+    5   & 14  &   & 14 & \\ \hline
+    6   & 14 &   & 14  & \\ \hline
+    7   & 16  & 8  & 8 &  {\footnotesize bab 1, bab 2, dan bab 3 di S1}\\ \hline
+    Total  & 100  & 50  & 50 &  \\ \hline
                           \end{tabular}
 \end{center}
 
@@ -131,6 +129,5 @@ Menyetujui, \\
 % \centering Bandung, \makebox[0.5cm]{\hrulefill}/\makebox[0.5cm]{\hrulefill}/2013\\
 \vspace{2cm} Nama: \makebox[3cm]{\hrulefill}\\ Pembimbing Tunggal
 }
-`
 \end{document}
 
